misc: add documentation
Signed-off-by: Anthony Griffon <anthony@griffon.one>

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,6 +6,7 @@ edition = "2021"
 license = "MIT OR Apache-2.0"
 description = "JSON Predicate lib based on draft-snell-json-07"
 repository = "https://github.com/Miaxos/json-predicate"
+documentation = "https://docs.rs/json-predicate/latest/json_predicate/"
 
 
 [dependencies]
